<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/clicks"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="417dp"
        android:foregroundGravity="center"
        app:columnCount="4"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:rowCount="4">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/description"
            android:onClick="chooserClick"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/empty" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/description"
            android:onClick="chooserClick"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/empty" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/description"
            android:onClick="chooserClick"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/empty" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/description"
            android:onClick="chooserClick"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/empty" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/description"
            android:onClick="chooserClick"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/empty" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/description"
            android:onClick="chooserClick"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/empty" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/description"
            android:onClick="chooserClick"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/empty" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/description"
            android:onClick="chooserClick"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/empty" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/description"
            android:onClick="chooserClick"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/empty" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/description"
            android:onClick="chooserClick"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/empty" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/description"
            android:onClick="chooserClick"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/empty" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/description"
            android:onClick="chooserClick"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/empty" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/description"
            android:onClick="chooserClick"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/empty" />

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/description"
            android:onClick="chooserClick"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/empty" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/description"
            android:onClick="chooserClick"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/empty" />

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/description"
            android:onClick="chooserClick"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/empty" />

    </androidx.gridlayout.widget.GridLayout>

    <ImageView
        android:contentDescription="@string/description"
        android:id="@+id/null_imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleType="fitCenter"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/empty" />

    <Button
        android:onClick="restartClick"
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/restart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:onClick="infoClick"
        android:id="@+id/imageView_info"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/info"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/info" />

</androidx.constraintlayout.widget.ConstraintLayout>